# thrust_cmake_test

./: CMakeLists.txt  test.cpp
